feat(api): :truck: create route to update settings
