# apps/api/openapi.json
@@ -124,6 +124,72 @@
           }
         }
       },
+      "SettingsModel": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid",
+            "example": "4df43fc4-fbf5-4286-9b51-edf852db180d"
+          },
+          "userId": {
+            "type": "string",
+            "format": "uuid",
+            "example": "4df43fc4-fbf5-4286-9b51-edf852db180d"
+          },
+          "enable": {
+            "type": "boolean",
+            "example": true
+          },
+          "steps": {
+            "type": "object",
+            "properties": {
+              "stepOne": {
+                "type": "object",
+                "properties": {
+                  "status": {
+                    "type": "string",
+                    "enum": [
+                      "pending",
+                      "completed"
+                    ],
+                    "example": "pending"
+                  }
+                },
+                "required": [
+                  "status"
+                ]
+              },
+              "stepTwo": {
+                "type": "object",
+                "properties": {
+                  "status": {
+                    "type": "string",
+                    "enum": [
+                      "pending",
+                      "completed"
+                    ],
+                    "example": "completed"
+                  }
+                },
+                "required": [
+                  "status"
+                ]
+              }
+            },
+            "required": [
+              "stepOne",
+              "stepTwo"
+            ]
+          }
+        },
+        "required": [
+          "id",
+          "userId",
+          "enable",
+          "steps"
+        ]
+      },
       "AthleteModel": {
         "type": "object",
         "properties": {
@@ -539,14 +605,14 @@
           }
         }
       },
-      "b9ad3ea5-890f-46d4-81df-d979e2a748b7": {
+      "1d98f1a2-51d2-4aeb-8683-b8af19500ee1": {
         "properties": {
           "userId": {
             "type": "string"
           }
         }
       },
-      "1c020180-e39b-4d83-8913-5f43c1590882": {
+      "45dcb057-35d3-48e0-b960-483e2295354a": {
         "properties": {
           "message": {
             "type": "string",
@@ -555,7 +621,7 @@
           }
         }
       },
-      "618e8707-2c92-4fa9-8a2e-dfa554db578e": {
+      "889c640f-8f85-4d10-a5da-d621b3c3c1de": {
         "properties": {
           "message": {
             "type": "string",
@@ -564,7 +630,7 @@
           }
         }
       },
-      "bfab0e73-48ca-41ef-826e-1f6f3e976d3d": {
+      "da73cd6d-96e0-4867-8674-bcbee12e794b": {
         "title": "User Schema",
         "description": "Schema for input data when signing up a user.",
         "type": "object",
@@ -605,7 +671,7 @@
         },
         "additionalProperties": false
       },
-      "86b6544b-ae61-41a3-8d54-bea44803ff51": {
+      "9af024c0-43bd-4da6-803e-e62999007cc3": {
         "properties": {
           "message": {
             "type": "string",
@@ -614,7 +680,7 @@
           }
         }
       },
-      "3ed908a9-70a6-4a7f-aac9-fa4849172971": {
+      "addda89f-bfae-469e-9ea5-05cd06a66bfe": {
         "properties": {
           "email": {
             "type": "string",
@@ -630,14 +696,14 @@
           "code"
         ]
       },
-      "a30edb37-051a-4c25-84be-39ad0d84a2c8": {
+      "dc22c1ac-de63-4e04-aab5-de7f3a69a7e9": {
         "properties": {
           "userId": {
             "type": "string"
           }
         }
       },
-      "66450e0a-053a-4aeb-a1d5-843bf703e097": {
+      "83031ae5-dd54-43d3-b47c-5a8ef0c581d8": {
         "properties": {
           "message": {
             "type": "string",
@@ -646,7 +712,7 @@
           }
         }
       },
-      "0571960d-09ae-4789-9d4d-62122bd53524": {
+      "0e31fa04-1b81-43ad-b54b-7a9ea27dadf2": {
         "properties": {
           "message": {
             "type": "string",
@@ -655,7 +721,7 @@
           }
         }
       },
-      "4fab24e7-cb19-49dc-a49e-7af119ede097": {
+      "d37cf35b-4558-4b3c-b413-11fffee41a08": {
         "properties": {
           "email": {
             "type": "string",
@@ -671,7 +737,7 @@
           "password"
         ]
       },
-      "e298c488-a6f1-4daa-b46d-ec6e183527ce": {
+      "8846f4b7-20b7-4276-a1b6-1343400673ca": {
         "properties": {
           "accessToken": {
             "type": "string",
@@ -683,7 +749,7 @@
         "type": "string",
         "example": "example-uuid"
       },
-      "ee850f99-7e3e-456d-b3f2-dc9a9111bf6b": {
+      "cd9ef244-8118-4519-be14-01739f764064": {
         "properties": {
           "athleteId": {
             "type": "string",
@@ -703,7 +769,7 @@
         "type": "string",
         "example": "example-uuid"
       },
-      "1aa566e3-8802-4f51-a10b-22c4fbb26711": {
+      "c21c0871-2156-49a1-8d23-2d04159bc0d0": {
         "properties": {
           "workoutId": {
             "type": "string",
@@ -726,6 +792,14 @@
           "coachId",
           "athleteId"
         ]
+      },
+      "1e22f1d2-e531-4242-95a9-9073a69793b3": {
+        "properties": {
+          "message": {
+            "type": "string",
+            "example": "Settings not found"
+          }
+        }
       }
     },
     "securitySchemes": {
@@ -774,7 +848,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/b9ad3ea5-890f-46d4-81df-d979e2a748b7"
+                  "$ref": "#/components/schemas/1d98f1a2-51d2-4aeb-8683-b8af19500ee1"
                 }
               }
             },
@@ -785,7 +859,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/1c020180-e39b-4d83-8913-5f43c1590882"
+                  "$ref": "#/components/schemas/45dcb057-35d3-48e0-b960-483e2295354a"
                 }
               }
             },
@@ -796,7 +870,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/618e8707-2c92-4fa9-8a2e-dfa554db578e"
+                  "$ref": "#/components/schemas/889c640f-8f85-4d10-a5da-d621b3c3c1de"
                 }
               }
             },
@@ -842,7 +916,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/bfab0e73-48ca-41ef-826e-1f6f3e976d3d"
+                  "$ref": "#/components/schemas/da73cd6d-96e0-4867-8674-bcbee12e794b"
                 }
               }
             },
@@ -864,7 +938,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/86b6544b-ae61-41a3-8d54-bea44803ff51"
+                  "$ref": "#/components/schemas/9af024c0-43bd-4da6-803e-e62999007cc3"
                 }
               }
             },
@@ -900,7 +974,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/3ed908a9-70a6-4a7f-aac9-fa4849172971"
+                "$ref": "#/components/schemas/addda89f-bfae-469e-9ea5-05cd06a66bfe"
               }
             }
           }
@@ -911,7 +985,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/a30edb37-051a-4c25-84be-39ad0d84a2c8"
+                  "$ref": "#/components/schemas/dc22c1ac-de63-4e04-aab5-de7f3a69a7e9"
                 }
               }
             },
@@ -922,7 +996,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/66450e0a-053a-4aeb-a1d5-843bf703e097"
+                  "$ref": "#/components/schemas/83031ae5-dd54-43d3-b47c-5a8ef0c581d8"
                 }
               }
             },
@@ -933,7 +1007,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/0571960d-09ae-4789-9d4d-62122bd53524"
+                  "$ref": "#/components/schemas/0e31fa04-1b81-43ad-b54b-7a9ea27dadf2"
                 }
               }
             },
@@ -980,7 +1054,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/4fab24e7-cb19-49dc-a49e-7af119ede097"
+                "$ref": "#/components/schemas/d37cf35b-4558-4b3c-b413-11fffee41a08"
               }
             }
           }
@@ -991,7 +1065,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/e298c488-a6f1-4daa-b46d-ec6e183527ce"
+                  "$ref": "#/components/schemas/8846f4b7-20b7-4276-a1b6-1343400673ca"
                 }
               }
             },
@@ -1176,7 +1250,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/ee850f99-7e3e-456d-b3f2-dc9a9111bf6b"
+                "$ref": "#/components/schemas/cd9ef244-8118-4519-be14-01739f764064"
               }
             }
           }
@@ -1247,7 +1321,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/1aa566e3-8802-4f51-a10b-22c4fbb26711"
+                "$ref": "#/components/schemas/c21c0871-2156-49a1-8d23-2d04159bc0d0"
               }
             }
           }
@@ -1372,6 +1446,90 @@
           }
         }
       }
+    },
+    "/settings": {
+      "put": {
+        "summary": "/settings",
+        "description": "Route for update settings. When you update settings, is necessary to send object with all information.",
+        "operationId": "updateSettings",
+        "parameters": [],
+        "tags": [
+          "Settings"
+        ],
+        "security": [
+          {
+            "CognitoAuthorizer": []
+          }
+        ],
+        "requestBody": {
+          "description": "Sample request body",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SettingsModel"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Return default response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SettingsModel"
+                }
+              }
+            },
+            "headers": {}
+          },
+          "401": {
+            "description": "Not authorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotAuthorizedResponse"
+                }
+              }
+            },
+            "headers": {}
+          },
+          "404": {
+            "description": "Settings not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/1e22f1d2-e531-4242-95a9-9073a69793b3"
+                }
+              }
+            },
+            "headers": {}
+          },
+          "422": {
+            "description": "An error message when send invalid data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationErrorResponse"
+                }
+              }
+            },
+            "headers": {}
+          },
+          "500": {
+            "description": "An unknown error message",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            },
+            "headers": {}
+          }
+        }
+      }
     }
   },
   "tags": [
@@ -1390,6 +1548,10 @@
     {
       "name": "Workouts",
       "description": "Routes for workouts"
+    },
+    {
+      "name": "Settings",
+      "description": "Routes for Settings"
     }
   ]
 }
