# apps/api/src/app/modules/settings/errors/settings-not-found.ts
@@ -1,0 +1,7 @@
+import { AppError } from "@application/errors/app-error";
+
+export class SettingsNotFound extends AppError {
+	constructor() {
+		super("Settings not found", 404);
+	}
+}
