# apps/api/src/core/domain/settings/index.ts
@@ -1,19 +1,25 @@
-export type StepStatus = "pending" | "completed";
+import * as z from "zod";
 
-export type Settings = {
-	id: string;
-	createdAt: string;
-	updatedAt: string;
-	userId: string;
-	onboarding: {
-		enable: boolean;
-		steps: {
-			stepOne: {
-				status: StepStatus;
-			};
-			stepTwo: {
-				status: StepStatus;
-			};
-		};
-	};
-};
+export const StepStatusSchema = z.enum(["pending", "completed"]);
+
+export type StepStatus = z.infer<typeof StepStatusSchema>;
+
+export const SettingsSchema = z.object({
+	id: z.string().uuid(),
+	createdAt: z.string(),
+	updatedAt: z.string(),
+	userId: z.string().uuid(),
+	onboarding: z.object({
+		enable: z.boolean(),
+		steps: z.object({
+			stepOne: z.object({
+				status: StepStatusSchema,
+			}),
+			stepTwo: z.object({
+				status: StepStatusSchema,
+			}),
+		}),
+	}),
+});
+
+export type Settings = z.infer<typeof SettingsSchema>;
